# extract-tables

./: .gitignore  Cargo.toml  README.md  deny.toml
examples/: extract_pdf.rs
src/: detect.rs  error.rs  lib.rs  rasterize.rs  types.rs
