[package]
name = "extract-tables"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Detect table, row, column, and cell bounding boxes in rasterized images of bordered tables. No ML, no OCR."
license = "MIT OR Apache-2.0"
repository = "https://github.com/CobraAitch/extract-tables"
readme = "README.md"
keywords = ["pdf", "table", "extraction", "image", "ocr-free"]
categories = ["computer-vision", "multimedia::images"]

[features]
default = ["pdfium"]
pdfium = ["dep:pdfium-render"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.26", default-features = false }
pdfium-render = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

[[example]]
name = "extract_pdf"
required-features = ["pdfium"]

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Image processing routinely casts between u32 (dims), i32, f32 (ratios), and
# u64 (areas). Truncation/precision/sign-loss lints fire on every line of CV
# code; we accept the risk and audit the cases that matter manually.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# Local closures and a private `find` fn inside `build_cells` are clearer than
# hoisting them out  the pedantic warning is style-only.
items_after_statements = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
